# experiments

./: .clang-format  main.c  meson.build
includes/: mergesort.h
src/: mergesort.c
test/: test_mergesort.c
